--- a/frontend/src/component/slideBlocks/TextBlock.module.scss
+++ b/frontend/src/component/slideBlocks/TextBlock.module.scss
@@ -1,3 +1,5 @@
+@import "../src/style/global";
+
 .textBlock{
   margin: 30px 35px;
   max-height: calc(100% - 60px);
@@ -5,21 +7,8 @@
 }
 
 .title{
-  white-space: pre-line;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 50.9358px;
-  line-height: 60px;
-  padding-bottom: 20px;
+  @include title;
 }
 .content{
-  white-space: pre-line;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 40.7487px;
-  line-height: 48px;
-  height: 940px;
-  max-height: 100%;
+ @include content;
 }
