--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -1,3 +1,12 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "modules/fonts.scss";
 @import "modules/flex.scss";
+body,html{
+  background: black;
+  margin: 0;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
