--- a/frontend/src/component/slides/baseSlides/BaseSlide.module.scss
+++ b/frontend/src/component/slides/baseSlides/BaseSlide.module.scss
@@ -44,9 +44,10 @@
 
 .slide{
   display: flex;
-  width: calc(1920px - 400px);
-  height: calc(1080px - 250px);
-  padding: 125px 200px;
+  width: 1920px;
+  height: 1080px;
+  box-sizing: border-box;
+  padding: 50px 75px;
   aspect-ratio: 16/9;
   transform-origin: 0 0;
   background-size: cover;
