--- a/frontend/src/component/slides/ImageSlide.scss
+++ b/frontend/src/component/slides/ImageSlide.scss
@@ -1,8 +1,10 @@
 .image-slide {
     width: 1920px;
     height: 1080px;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+
 
   &__text-bar{
     background:white;
