--- a/frontend/src/component/slideBlocks/TextBlock.module.scss
+++ b/frontend/src/component/slideBlocks/TextBlock.module.scss
@@ -16,14 +16,15 @@
  @include content;
   box-sizing: border-box;
   flex: 1 1 auto;
-  &p{
+  height: fit-content;
+  & p{
     margin: 0;
   }
-  &ul{
+  & ul{
     margin: 0;
     padding: 0;
     list-style: none;
-    &li{
+    & li{
       margin: 0;
       padding: 0;
     }
