--- a/frontend/src/component/slideBlocks/TextBlock.module.scss
+++ b/frontend/src/component/slideBlocks/TextBlock.module.scss
@@ -14,17 +14,21 @@
 }
 .content{
  @include content;
-  box-sizing: border-box;
-  flex: 1 1 auto;
-  height: fit-content;
+  box-sizing: content-box;
+  & * {
+    margin: 0;
+  }
+  //flex: 1 1 auto;
   & p{
     margin: 0;
+    padding: 0px;
   }
   & ul{
     margin: 0;
     padding: 0;
     list-style: none;
     & li{
+      margin: 0px;
       margin: 0;
       padding: 0;
     }
