--- a/frontend/src/style/modules/fonts.scss
+++ b/frontend/src/style/modules/fonts.scss
@@ -20,7 +20,7 @@ div{
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 55px;
 
   padding-bottom: 20px;
 }
@@ -29,13 +29,20 @@ div{
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 40px;
+  font-size: 45px;
 }
 
+@mixin small-content{
+  @include content;
+  font-size: 40px;
+}
 
 .title-text{
     @include title;
 }
 .content-text{
     @include content;
+}
+.small-content-text{
+    @include small-content;
 }
