--- a/frontend/src/component/slides/baseSlides/BaseSlide.module.scss
+++ b/frontend/src/component/slides/baseSlides/BaseSlide.module.scss
@@ -35,7 +35,7 @@
   display: none;
 }
 .body{
-  background: white;
+  background: #fdfdfc;
   width: 100%;
   border-radius: 0 10px 10px 0;
   height: 100%;
